[package]
name = "bananatree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.114"
tokio = "1.36.0"
tokio-postgres = "0.7.10"
